<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <!--
    The main parent project definition for the entire application (server and client). This defines the modules that
    make up the project so that they can be built as one (and opened as a single project in an IDE). This top level
    POM does not provide any build steps itself but is just an aggregator of the modules.
-->
  <groupId>grafioschtrader</groupId>
  <artifactId>grafioschtrader</artifactId>
  <packaging>pom</packaging>
  <version>0.36.8</version>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>4.1.1</version>
    <relativePath/>
  </parent>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.json</groupId>
        <artifactId>json</artifactId>
        <version>20260719</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-collections4</artifactId>
        <version>4.5.0</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-text</artifactId>
        <version>1.15.0</version>
      </dependency>
      <dependency>
        <groupId>commons-validator</groupId>
        <artifactId>commons-validator</artifactId>
        <version>1.11.0</version>
      </dependency>
      <dependency>
        <groupId>com.bucket4j</groupId>
        <artifactId>bucket4j_jdk17-core</artifactId>
        <version>8.19.0</version>
      </dependency>
      <dependency>
        <groupId>com.ezylang</groupId>
        <artifactId>EvalEx</artifactId>
        <version>3.7.0</version>
      </dependency>
      <dependency>
        <groupId>org.apache.pdfbox</groupId>
        <artifactId>pdfbox</artifactId>
        <version>3.0.8</version>
      </dependency>
      <dependency>
        <groupId>org.springdoc</groupId>
        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
        <version>3.1.0</version>
      </dependency>
      <dependency>
        <groupId>io.hypersistence</groupId>
        <artifactId>hypersistence-utils-hibernate-71</artifactId>
        <version>3.15.4</version>
      </dependency>
      <dependency>
        <groupId>com.github.ulisesbocchio</groupId>
        <artifactId>jasypt-spring-boot-starter</artifactId>
        <!--  adjust maven plugin as well -->
        <version>4.0.4</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <!-- organisation is needed by the JavaFX plugin but we define it here for general use -->
  <organization>
    <name>grafioschtrader</name>
  </organization>
  <!-- define the common properties used throughout the modules - allows us to keep things consistent -->
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <java.version>25</java.version>
    <!-- Formatter profile shared with Spring Tools / Eclipse. Maven inherits property values
         unresolved, so ${project.basedir} is re-interpolated in every module; each module sits
         at backend/<module>/, which makes ../../ the repository root in all of them. -->
    <gt.java.formatter>${project.basedir}/../../gt-code-style/backend/eclipse/gt-java-formatting.xml</gt.java.formatter>
    <spotless.version>2.44.5</spotless.version>
    <!-- Eclipse JDT release whose formatter Spotless runs. Keep it close to the JDT of the
         installed Spring Tools so IDE and command line produce the same bytes. -->
    <gt.jdt.version>4.36</gt.jdt.version>
  </properties>
  <build>
    <pluginManagement>
      <plugins>
        <!-- Code formatting. Deliberately NOT bound to a lifecycle phase: "mvn clean install"
             must never rewrite sources and must never fail because of formatting. Run it
             explicitly with "mvn spotless:apply", check with "mvn spotless:check".
             The <eclipse> step reads the very profile that Spring Tools imports, so IDE and
             command line produce the same bytes. If they ever disagree, add an explicit
             <version> inside <eclipse> matching the JDT of the installed Spring Tools. -->
        <plugin>
          <groupId>com.diffplug.spotless</groupId>
          <artifactId>spotless-maven-plugin</artifactId>
          <version>${spotless.version}</version>
          <configuration>
            <java>
              <eclipse>
                <version>${gt.jdt.version}</version>
                <file>${gt.java.formatter}</file>
              </eclipse>
              <!-- Reproduces the order the sources already use: static first, then java,
                   javax, org, com, then everything else alphabetically. -->
              <importOrder>
                <order>\#,java,javax,org,com,</order>
              </importOrder>
              <removeUnusedImports />
              <trimTrailingWhitespace />
              <endWithNewline />
            </java>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <!-- The aggregator itself carries no Java sources, and ${gt.java.formatter} only
           resolves from a module directory. inherited=false keeps this skip out of the
           modules, so "mvn spotless:apply" at the reactor root works on all of them. -->
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <inherited>false</inherited>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.12.0</version>
        <configuration>
          <!-- alle Module aggregieren -->
          <aggregate>true</aggregate>
          <!-- Ziel-Ordner im Workspace-Root -->
          <reportOutputDirectory>${project.basedir}/javadoc</reportOutputDirectory>
          <!-- keine Fehler/Warnungen als Exit-Code -->
          <failOnError>false</failOnError>
          <doclint>all,-missing</doclint>
        </configuration>
      </plugin>
    </plugins>
  </reporting>
  <!-- define the sub-modules - Maven will work out the build order based on their inter-dependencies -->
  <modules>
    <module>grafiosch-base</module>
    <module>grafiosch-server-base</module>
    <module>grafioschtrader-common</module>
    <module>grafioschtrader-server</module>
    <module>grafiosch-test-integration</module>
  </modules>
</project>
